# chat_app

./: pyproject.toml
App/: asgi.py  settings.py  urls.py
chat/: admin.py  models.py  routing.py  serializers.py  urls.py  views.py
chat/api/: __init__.py  channel.py  channel_membership.py  message.py  team.py
chat/consumers/: __init__.py  chat.py  user_presence.py
chat/migrations/: 0001_initial.py
templates/chat/: base.html  chat_history.html  chat_room.html
